<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_Statemachine_Transition_Controlword" Id="{c595950e-5e93-4962-aebe-baa0b2f605a5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Statemachine_Transition_Controlword :
(
    Switch_on_disabled	:= 16#0000,
    Ready_to_switch_on	:= 16#0006,
    Switched_on			:= 16#0007,
    Operation_enabled	:= 16#000F,
    Quick_stop_active	:= 16#0002,
    Faultreset_step_1	:= 16#0000,
    Faultreset_step_2	:= 16#0080
) WORD ;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>